--- a/home.html
+++ b/home.html
@@ -12,20 +12,20 @@
 </head>
 <body>
     <!--header-->
-    <div class="header-parent" >
+    <div class="header-parent" id="home-tag" >
         
         <h1><a  class="logo" href="home.html">Portfolio</a></h1>
         <div >
             <ul class="header-list" >
-                <li><a class="list-style" href="#">Home</a></li>
-                <li><a class="list-style" href="#">About</a></li>
-                <li><a class="list-style" href="#">Work</a></li>
-                <li><a class="list-style" href="#">Contact</a></li>
+                <li><a class="list-style" href="#home-tag">Home</a></li>
+                <li><a class="list-style" href="#about-tag">About</a></li>
+                <li><a class="list-style" href="#work-tag">Work</a></li>
+                <li><a class="list-style" href="#contact-tag">Contact</a></li>
             </ul>
         </div>  
     </div>
     <!--banner-->
-    <div class="container">
+    <div class="container" >
         <div class="border-container">
         <img src="imgsample4.png" class="img-section">
         <div class="container-word">
@@ -36,7 +36,7 @@
         </div>
     </div>
     <!--about-->
-    <div class="about">
+    <div class="about" id="about-tag">
         <div class="about-img">
             <img src="IMG_4104-1.JPG" alt="">
         </div>
@@ -67,7 +67,7 @@
         <div><img src="logo/GIT-logo.png" alt="" class="git-logo"><p>GIT</p></div>
     </div>
     
-    <footer class="footer">
+    <footer class="footer" id="contact-tag">
         <div class="contact-h">
         <h2>Contact</h2>
         </div>
