--- a/home.html
+++ b/home.html
@@ -66,7 +66,7 @@
         <div><img src="logo/linux-logo.png" alt="" class="linux-logo"><p>LINUX</p></div>
         <div><img src="logo/GIT-logo.png" alt="" class="git-logo"><p>GIT</p></div>
     </div>
-    
+    <!--footer-->>
     <footer class="footer" id="contact-tag">
         <div class="contact-h">
         <h2>Contact</h2>
@@ -124,7 +124,24 @@
     slidesToShow: 3,
     slidesToScroll: 3,
     nextArrow:'<span class="prev_arrow"><i class="fa-solid fa-arrow-right fa-beat-fade fa-lg" ></i></span>',
-    prevArrow:'<span class="next_arrow"><i class="fa-solid fa-arrow-left fa-beat-fade fa-lg"></i></span>',   
+    prevArrow:'<span class="next_arrow"><i class="fa-solid fa-arrow-left fa-beat-fade fa-lg"></i></span>', 
+    responsive: [
+        {
+            breakpoint:840,
+            settings:{
+                slidesToShow: 2,
+                slidesToScroll:1,
+            }
+        },
+        {
+            breakpoint:500,
+            settings:{
+                slidesToShow:1,
+                slidesToScroll:1,
+            }
+        }
+    ]
+  
   });
 </script>
 
