--- a/home.html
+++ b/home.html
@@ -20,13 +20,19 @@
     <div class="header-parent" id="home-tag" >
         
         <h1><a  class="logo" href="home.html">Portfolio</a></h1>
-        <div >
+        <div>
             <ul class="header-list" >
-                <li><a class="list-style" href="#home-tag">Home</a></li>
-                <li><a class="list-style" href="#about-tag">About</a></li>
-                <li><a class="list-style" href="#work-tag">Work</a></li>
-                <li><a class="list-style" href="#contact-tag">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="#home-tag">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#about-tag">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#work-tag">Work</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contact-tag">Contact</a></li>
             </ul>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+
+            </div>
         </div>  
     </div>
     <!--banner-->
