--- a/home.html
+++ b/home.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css" integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="header.css">
     
 </head>
 <body>
@@ -40,9 +41,9 @@
         <div class="border-container">
         <img src="imgsample4.png" class="img-section">
         <div class="container-word">
-            <h3>Hi, i'm</h3>
-            <h2>Pratyush Anand</h2>
-            <h4>web Developer</h4>
+            <h3 class="log-1">Hi, i'm</h3>
+            <h2 class="log-1">Pratyush Anand</h2>
+            <h4 class="log-1">web Developer</h4>
         </div>
         </div>
     </div>
